Fix min_location usage in line-map.c (PR preprocessor/90382).

2019-05-14  Martin Liska  <mliska@suse.cz>

	PR preprocessor/90382
	* line-map.c (first_map_in_common_1): Handle ADHOC
	locations.


git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/trunk@271163 138bc75d-0d04-0410-961f-82ee72b054a4